tests/error/modifier_errors/flag_dagger_assign1.py
from guppylang import guppy, qubit


@guppy(dagger=True)
def test() -> None:
    p = qubit()


test.compile()
